--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ img {
 }
 
 .slide-one {
-    margin-top: 75px;
+    margin-top: 100px;
 
 
 }
+
 
 .slider-div {
     height: 100vh;
@@ -49,11 +50,20 @@ img {
 }
 
 .logo-position div img {
-    width: 200px;
+    max-width: 200px;
     text-align: center;
-    margin-top: 40%;
+    margin-top: 50%;
     height: 200px;
     
+}
+
+.slider-one{
+    margin-top: 30px;
+}
+.slider-three {
+    margin-top: 100px;
+
+
 }
 
 /* responsive */
