--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+* {margin: 0; padding: 0;}
+body { background-color: #000; }
+.block {
+  overflow: hidden;
+  width: 800px;
+  margin: 50px auto;
+  background: #fff;
+}
+.animation {
+  width: auto;
+  height: 100px;
+  font-size: 0px;
+}
+.animation div {
+  display: inline-block;
+  width: auto;
+  float: none;
+  padding: 0 10px;
+}
+
 .col-lg-6 {
     padding: 0 !important;
 }
@@ -58,7 +78,7 @@ img {
 }
 
 .slider-one{
-    margin-top: 30px;
+    margin-top: 20px;
 }
 .slider-three {
     margin-top: 100px;
@@ -77,11 +97,11 @@ img {
     }
 
     .slide-one {
-        margin-top: 30px;
+        margin-top: 10px;
     }
 
     img {
-        height: 100px;
+        height: 80px;
     }
 
     .logo-position div img {
@@ -120,5 +140,13 @@ img {
         margin-top: 25px;
         height: 200px;
         margin-bottom: 25px;
+    }
+    .slider-one{
+        margin-top: 5px;
+    }
+    .slider-three {
+        margin-top: 5px;
+    
+    
     }
 }
