--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body { background-color: #000; }
   margin: 50px auto;
   background: #fff;
 }
+.header-section{
+    overflow: hidden;
+}
 .animation {
   width: auto;
   height: 100px;
@@ -78,7 +81,7 @@ img {
 }
 
 .slider-one{
-    margin-top: 20px;
+    margin-top: 30px;
 }
 .slider-three {
     margin-top: 100px;
@@ -88,20 +91,17 @@ img {
 
 /* responsive */
 @media (max-width: 991.98px) {
-    .col-lg-6.col-md-12.production-col.bg-dark {
-        height: 50vh !important;
-    }
-
-    .col-lg-6.col-md-12.bg-primary.weadding-col {
-        height: 50vh !important;
-    }
+   
 
     .slide-one {
-        margin-top: 10px;
+        margin-top:5px;
+    }
+    .slider-three{
+        margin-top:10px;
     }
 
     img {
-        height: 95px;
+        height: 100px;
     }
 
     .logo-position div img {
@@ -111,9 +111,8 @@ img {
         height: 200px;
         margin-bottom: 25px;
     }
-
     .logo-div {
-        height: 550px;
+        height: 500px;
         width: 70%;
         background-color: black;
         position: absolute;
@@ -122,17 +121,8 @@ img {
         transform: translate(-50%, -50%);
         z-index: 25;
     }
+
+    
 }
 
-@media (max-width: 991.98px) {
-    
-   
-    .slider-one{
-        margin-top: 5px;
-    }
-    .slider-three {
-        margin-top: 5px;
-    
-    
-    }
-}
+
